--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/davidbranco">View on GitHub</a>
 
           <h1 id="project_title">davidbranCO</h1>
-          <h2 id="project_tagline">Simple, Great and Tasty Systems</h2>
+          <h2 id="project_tagline">Simple, great and taste softwares</h2>
 
         </header>
     </div>
@@ -28,7 +28,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a id="você-está-no-lugar-certo" class="anchor" href="#voc%C3%AA-est%C3%A1-no-lugar-certo" aria-hidden="true"><span class="octicon octicon-link"></span></a>Você está no lugar certo!</h3>
+<a id="idplace" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>We do computer stuff!</h3>
 
 <ul>
 <li><a href="mailto:david.branco@hotmail.com">david.branco@hotmail.com</a></li>
