--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/davidbranco">View on GitHub</a>
 
           <h1 id="project_title">davidbranCO</h1>
-          <h2 id="project_tagline">Simple, great and taste softwares</h2>
+          <h2 id="project_tagline">Simple, useful and tasty softwares</h2>
 
         </header>
     </div>
@@ -32,7 +32,7 @@
 
 <ul>
 <li><a href="mailto:david.branco@hotmail.com">david.branco@hotmail.com</a></li>
-<li>+ 55 47 99090977</li>
+<li>+ 55 47 9 99090977</li>
 <li><a href="https://br.linkedin.com/in/cdavidbranco">https://br.linkedin.com/in/cdavidbranco</a></li>
 </ul>
       </section>
